--- a/email.html
+++ b/email.html
@@ -1,98 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html dir="ltr" lang="en">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Activate Your Account</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        background-color: #f4f4f4;
-        padding: 20px;
-      }
-
-      .container {
-        max-width: 600px;
-        margin: 0 auto;
-        background: #ffffff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      }
-
-      h2 {
-        color: #333333;
-        font-weight: 600;
-      }
-
-      .message {
-        margin-bottom: 20px;
-        color: #666666;
-      }
-
-      .btn {
-        display: inline-block;
-        background-color: #4caf50;
-        color: white;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        border-radius: 5px;
-        margin-right: 10px;
-        margin-bottom: 10px;
-        cursor: pointer;
-      }
-
-      .btn-copy {
-        background-color: #008cba;
-        padding: 15px 20px;
-        border: transparent;
-      }
-
-      .btn-wrapper {
-        display: flex;
-        align-items: center;
-      }
-    </style>
+    <link rel="preload" as="image" href="https://react-email-demo-3kjjfblod-resend.vercel.app/static/koala-logo.png" />
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <meta name="x-apple-disable-message-reformatting" />
   </head>
 
-  <body>
-    <div class="container">
-      <h2>Activate Your Account</h2>
-      <p class="message">Hello ${userName},</p>
-      <p class="message">Click the button below to activate your account:</p>
-      <div class="btn-wrapper">
-        <a
-          href="${activationUrl} "
-          target="_blank"
-          class="btn"
-          style="color: #fff; font-size: 15px; display: block"
-          >Activate Now</a
-        >
-        <button class="btn btn-copy" onclick="copyActivationLink()">
-          Copy Activation Link
-        </button>
-        <script>
-          function copyActivationLink() {
-            const activationLink = "${activationUrl}";
-            navigator.clipboard
-              .writeText(activationLink)
-              .then(() => {
-                alert("Activation link copied to clipboard!");
-              })
-              .catch((err) => {
-                console.error("Failed to copy activation link: ", err);
-              });
-          }
-        </script>
-      </div>
-      <p class="message">
-        If clicking the button above doesn't work, you can paste the following
-        URL into your browser:
-      </p>
-      <p class="message">${activationUrl}</p>
-      <p class="message">Thank you!</p>
-    </div>
+  <body style="background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif">
+    <table align="center" width="100%" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="max-width:37.5em;margin:0 auto;padding:20px 0 48px">
+      <tbody>
+        <tr style="width:100%">
+          <td><img alt="Koala" height="60" src="https://res.cloudinary.com/ayush999/image/upload/v1729001373/logos/eshop/rqbxd8tyw2crufcbecfj.png" style="display:block;outline:none;border:none;text-decoration:none;margin:0 auto" width="170" />
+            <p style="font-size:16px;line-height:26px;margin:16px 0">Hello ${userName},</p>
+            <p style="font-size:16px;line-height:26px;margin:16px 0">Click the button below to activate your account</p>
+            <table align="center" width="100%" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="text-align:center">
+              <tbody>
+                <tr>
+                  <td><a href="${activationUrl}" style="line-height:100%;text-decoration:none;display:block;max-width:100%;mso-padding-alt:0px;background-color:#6778ed;border-radius:3px;color:#fff;font-size:16px;text-align:center;padding:12px 12px 12px 12px" target="_blank"><span></span><span style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:9px">Activate Now</span><span></span></a></td>
+                </tr>
+              </tbody>
+            </table>
+            <p style="font-size:16px;line-height:26px;margin:16px 0">Best Regards,<br />Eshopa team</p>
+            <p style="font-size:12px;line-height:24px;margin:16px 0;color:#8898aa">
+                If clicking the button above doesn't work, you can paste the following
+                URL into your browser:
+              </p>
+              <p class="message">${activationUrl}</p>
+            <hr style="width:100%;border:none;border-top:1px solid #eaeaea;border-color:#cccccc;margin:20px 0" />
+            <p style="font-size:12px;line-height:24px;margin:16px 0;color:#8898aa">Bengaluru Karnataka India</p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
